PRD-2505 Allow querying for specific secrets (#1)
* Allow querying for specific secrets